fix: bug nav bar version mobile

--- a/style.css
+++ b/style.css
@@ -309,7 +309,7 @@ font-size: 1.5rem;
         }
 
         header .navegacao-primaria {
-            display: ;
+            display: none;
         }
 
         header i {
